Pull up the following revisions(s) (requested by joerg in ticket #1315): 	include/math.h:	revision 1.51

Address PR#36988: ISO C99 mandates that HUGE_VAL, HUGE_VALF, HUGE_VALL and
INFINITY are constant expressions.
Use the GCC builtins if possible to implement them.